--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -5,17 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.jackandphantom.carouselrecyclerview.view.ReflectionViewContainer
-        android:layout_width="120dp"
+        android:layout_width="200dp"
+        android:layout_height="400dp"
         android:orientation="vertical"
-        app:reflect_gap="5dp"
-        android:layout_height="240dp">
+        app:reflect_gap="5dp">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/hacker"
-            android:id="@+id/image"/>
+            android:id="@+id/image"
+            android:layout_width="200dp"
+            android:layout_height="400dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/hacker" />
 
     </com.jackandphantom.carouselrecyclerview.view.ReflectionViewContainer>
 
