--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.jackandphantom.carouselrecyclerview.view.ReflectionViewContainer
-        android:layout_width="200dp"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        app:reflect_gap="5dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="200dp"
-            android:layout_height="400dp"
+            android:layout_height="600dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/hacker" />
+            android:src="@drawable/hacker"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </com.jackandphantom.carouselrecyclerview.view.ReflectionViewContainer>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
